--- a/openAllRelays.html
+++ b/openAllRelays.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
     RED.nodes.registerType('OpenAllRelays',{
         category: 'AC Power Module',
-        color: '#87CEEB',
+        color: '#FA8072',
         defaults: {
             name:{
                 value: ""
@@ -19,9 +19,9 @@
         },
         inputs:1,
         outputs:1,
-        icon: "font-awesome/fa-bars",
-        label: function() { return this.name || "OpenAllRelays" },
-        paletteLabel: "OpenAllRelays",
+        icon: "./icons/Open_All_Relays.svg",
+        label: function() { return this.name || "Open All Relays" },
+        paletteLabel: "Open All Relays",
     });
 </script>
 
