--- a/openAllRelays.html
+++ b/openAllRelays.html
@@ -3,116 +3,438 @@
         category: 'AC Power Module',
         color: '#FA8072',
         defaults: {
-            name:{
-                value: ""
-            },
-            slot:{value:"", required:true}
-            // gpionum:{
-            //     value: ""
-            // },
-            // output:{
-            //     value: "false"
-            // },
-            // serial:{
-            //     type: "serial-template",
-            //     required: true
-            // },
+            name:{value: ""},
+            slot:{value:"", required:true},
+
+            phase_selector1: { value: "" },
+            phase_selector2: { value: "" },
+            phase_selector3: { value: "" },
+            phase_selector4: { value: "" },
+            phase_selector5: { value: "" },
+            // qtdAll:{value:0},
+            // controle:{value:0},
+            // slot1:{value:""},
+            // slot2:{value:""},
+            // slot3:{value:""},
+            // slot4:{value:""},
+            // slot5:{value:""},
+            // slot6:{value:""},
+            // slot7:{value:""},
+            // slot8:{value:""},
+            // slot9:{value:""},
+            // slot10:{value:""},
+            // slot11:{value:""},
+            // slot12:{value:""},
+            // slot13:{value:""},
+            // slot14:{value:""},
+            // slot15:{value:""},
+            // slot16:{value:""},
+            // slot17:{value:""},
+            // slot18:{value:""},
+            // slot19:{value:""},
+            // slot20:{value:""},
+            // slot21:{value:""},
+            // slot22:{value:""},
+            // slot23:{value:""},
+            // slot24:{value:""},
         },
         inputs:1,
         outputs:1,
         icon: "AC_Power.svg",
-        label: function() { return this.name? "Open All Relays - " + this.name: "Open All Relays" },
+        label: function() { return this.name? "Open Relays - " + this.name: "Open Relays" },
         paletteLabel: "Open All Relays",
+        oneditprepare: function() {
+            // var self = this
+            // self.controle = self.qtdAll;
+
+            // for(var i=1; i<=self.controle; i++){
+            //     $(".all"+i).show();
+            // }
+            // if(!self.controle || self.controle < 0){
+            //     self.controle = 0;
+            // }
+            // $("#addOpneAllRelays").click(function(){
+            //     self.controle = self.controle+1 <= 24 ? self.controle + 1 : 24;
+
+            //     $(".all"+self.controle).show();
+            //     console.log(self.controle);
+            // });
+            // $("#remOpneAllRelays").click(function(){
+            //     $(".all"+self.controle).hide();
+            //     self.controle = self.controle-1 >= 0 ? self.controle - 1 : 0;
+            //     console.log(self.controle);
+            // });
+        },
+        oneditsave: function() {
+            // this.qtdAll = this.controle;
+        }
     });
 </script>
 
-
-
 <style>
-
-
     label{
-        width: 50% !important;
+        width: 100% !important;
         margin-bottom: 2px !important;
     }
-
     .columm{
         display: flex !important;
         flex-direction: column !important;
     }
-
     hr {
-    width: 40% !important;
-    float: left !important;
+        width: 40% !important;
+        float: left !important;
     }
-
     .hr-div-openRelay{
         display: flex !important;
         justify-content: space-between !important;
-        margin-top: 400px !important;
+        /* margin-top: 400px !important; */
     }
-
     .optional{
         height: max-content !important;
         margin-top: 10px !important;
     }
-
     .descript{
         text-align: center;
     }
+    .columm-30{
+        display: flex !important;
+        flex-direction: column !important;
+        width: 30% !important;
+        float: left !important;
+    }
+    .columm-50{
+        display: flex !important;
+        flex-direction: column !important;
+        width: 50% !important;
+        float: left !important;
+    }
 
+
+    .columm-70{
+        display: flex !important;
+        flex-direction: column !important;
+        width: 70% !important;
+        float: left !important;
+    }
+
+    .descript-div{
+        max-width: 444px !important;
+    }
+
+    span.red-ui-typedInput-type-label {
+    /* background: chartreuse; */
+    /* display: block; */
+    width: 250px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    }
+
+    .btn-aln{
+        display: flex !important;
+        flex-direction: row-reverse !important;
+        /* padding-left: 30px; */
+        align-content: center;
+        align-items: flex-end;
+    }
+    .check{
+    width: 20px !important;
+    margin-top: 0px !important;
+    margin-bottom: 3px;
+    }
+
+    .label-check{
+        width: 200px !important;
+        margin: 0px !important;
+    }
 </style>
 
-
 <script type="text/html" data-template-name="OpenAllRelays">
-
-    <div class="form-row columm">
+    <div class="form-row columm descript-div">
         <strong class="descript">
             Changes the status of all relays to open
         </strong>
+    </div>
+    <div style=" position: relative; display:flex; margin-top: 20px;">
+        <div class="form-row columm-70">
+            <label style="width: 50% !important;" for="node-input-name" ><i class="fa fa-tag"></i> Identification Note</label>
+            <input type="text" id="node-input-name" placeholder="Name" style="width: 100%">
+        </div>
+        <!-- <div class="form-row columm-30" style="align-items: flex-end !important;">
+            <label style="width: max-content !important; padding-right: 24px;"><i class="fa fa-list-ul"></i> Item</label>
+            <div class="form-row btn-aln" >
+                <a id="addOpneAllRelays" class="red-ui-button" ><i class="fa fa-plus"></i></a>
+                <a id="remOpneAllRelays" class="red-ui-button" style="margin-right: 5px;" ><i class="fa fa-minus"></i></a>
+            </div>
+        </div> -->
+    </div>
+    <!-- <div class="form-row" style="display:flex; justify-content: space-between;">
+        <button  class="btn-uni btn-add"  type="button" id="addOpneAllRelays"> <i class="fa fa-plus" style="margin-right: 5px; font-size: 15px;"></i></button>
+        <button class="btn-uni btn-remove"   type="button" id="remOpneAllRelays"> <i class="fa fa-trash" style="margin-right: 10px; font-size: 15px;"></i></button>
+    </div> -->
+    <div class="hr-div-openRelay">
+        <hr>
+        <span class="optional">Slot 0</span>
+        <hr>
     </div>
     <div class="form-row columm">
         <label  for="node-input-slot"><i class="fa fa-sliders"></i> Slot</label>
         <input type="number" id="node-input-slot" style="width:20%;">
     </div>
 
-    <!-- <div class="form-row" >
-        <label for="node-input-gpionum"><i class="fa fa-microchip" aria-hidden="true"></i> Numero do GPIO</label>
-        <select id="node-input-gpionum" style="width:15%;">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-            <option value="11">11</option>
-            <option value="12">12</option>
-        </select>
-        <label for="node-input-output" style="margin-left:20%;"><i class="fa fa-sign-out" aria-hidden="true"></i> Output</label>
-        <select id="node-input-output" style="width:18%; margin-left:-30px">
-            <option value="true">True</option>
-            <option value="false">False</option>
-        </select>
-    </div> -->
-    <!-- <div class="form-row node-input-serial">
-        <label for="node-input-serial"><i class="fa fa-random"></i> Serial Port</label>
-        <input type="text" id="node-input-serial">
+
+    <div class= "form-row">
+
+        <input class="check" type="checkbox" id="node-input-phase_selector1"checked>
+        <label class="label-check" id="VA" for="node-input-phase_selector1"> VA </label>
+    </div>
+    <div class= "form-row">
+
+        <input class="check" type="checkbox" id="node-input-phase_selector2"checked>
+        <label class="label-check" id="VB" for="node-input-phase_selector2"> VB </label>
+    </div>
+    <div class= "form-row">
+        
+        <input class="check" type="checkbox" id="node-input-phase_selector3"checked>
+        <label class="label-check" id="VC" for="node-input-phase_selector3"> VC </label>
+    </div>
+    <div class= "form-row">
+
+        <input class="check" type="checkbox" id="node-input-phase_selector4"checked>
+        <label class="label-check" id="IABC" for="node-input-phase_selector4"> IABC </label>
+    </div>
+    <!-- <div class= "form-row">
+
+        <input class="check" type="checkbox" id="node-input-phase_selector5"checked>
+        <label class="label-check" id="OPENALL" for="node-input-phase_selector5"> Open All </label>
     </div> -->
 
-    <div class="hr-div-openRelay">
+<!--     
+    <div class="all1" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 1</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot1"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot1" style="width:20%;">
+    </div>
+    <div class="all2" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 2</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot2"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot2" style="width:20%;">
+    </div>
+    <div class="all3" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 3</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot3"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot3" style="width:20%;">
+    </div>
+    <div class="all4" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 4</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot4"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot4" style="width:20%;">
+    </div>
+    <div class="all5" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 5</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot5"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot5" style="width:20%;">
+    </div>
+    <div class="all6" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 6</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot6"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot6" style="width:20%;">
+    </div>
+    <div class="all7" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 7</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot7"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot7" style="width:20%;">
+    </div>
+    <div class="all8" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 8</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot8"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot8" style="width:20%;">
+    </div>
+    <div class="all9" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 9</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot9"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot9" style="width:20%;">
+    </div>
+    <div class="all10" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 10</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot10"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot10" style="width:20%;">
+    </div>
+    <div class="all11" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 11</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot11"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot11" style="width:20%;">
+    </div>
+    <div class="all12" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 12</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot12"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot12" style="width:20%;">
+    </div>
+    <div class="all13" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 13</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot13"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot13" style="width:20%;">
+    </div>
+    <div class="all14" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 14</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot14"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot14" style="width:20%;">
+    </div>
+    <div class="all15" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 15</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot15"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot15" style="width:20%;">
+    </div>
+    <div class="all16" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 16</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot16"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot16" style="width:20%;">
+    </div>
+    <div class="all17" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 17</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot17"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot17" style="width:20%;">
+    </div>
+    <div class="all18" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 18</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot18"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot18" style="width:20%;">
+    </div>
+    <div class="all19" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 19</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot19"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot19" style="width:20%;">
+    </div>
+    <div class="all20" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 20</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot20"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot20" style="width:20%;">
+    </div>
+    <div class="all21" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 21</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot21"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot21" style="width:20%;">
+    </div>
+    <div class="all22" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 22</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot22"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot22" style="width:20%;">
+    </div>
+    <div class="all23" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 23</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot23"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot23" style="width:20%;">
+    </div>
+    <div class="all24" style="display: none;">
+        <div class="hr-div-openRelay">
+            <hr>
+                <span class="optional">Slot 24</span>
+            <hr>
+        </div>
+        <label  for="node-input-slot24"><i class="fa fa-sliders"></i> Slot</label>
+        <input min="0" type="number" id="node-input-slot24" style="width:20%;">
+    </div> -->
+    <!-- <div class="hr-div-openRelay">
         <hr>
         <span class="optional">Optional</span>
         <hr>
     </div>
-
     <div class="form-row columm">
         <label style="width: 50% !important;" for="node-input-name" ><i class="fa fa-tag"></i> Component Nickname</label>
         <input type="text" id="node-input-name" placeholder="Name">
-    </div>
+    </div> -->
 </script>
 
 <script type="text/html" data-help-name="OpenAllRelays">
